# rusty-backup

./: .gitignore  Cargo.toml  README.md  backup_settings.sample.xml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
src/backup/: mod.rs
src/configuration/: archive.rs  compression.rs  credential.rs  database.rs  destination.rs  directory.rs  encryption.rs  mod.rs  program_parameter.rs
src/formatter/: mod.rs
src/helper/: mod.rs
src/restore/: mod.rs
