[package]
name = "rusty-backup"
version = "0.1.0"
authors = ["Ringo Leese <webmaster@ringoleese.de>"]
edition = "2021"

[dependencies]
bytes = "1.11"
bzip2 = "0.6"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo"] }
dirs = "6.0"
futures = "0.3"
futures-fs = "0.0.5"
lazy_static = "1.5"
log = "0.4"
log4rs = "1.3"
nix = { version = "0.30", features = ["user"] }
parse_duration0 = "3.0"
regex = "1.12"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
ssh2 = "0.9"
tar = "0.4"
termion = "4.0"
tokio = { version = "1.49", features = ["full"] }
walkdir = "2.5"
xml-rs = "1.0"
